branches/rankin-sandbox/PlusLib/tools/UsDigital/SEI_5.22/inc/SEIDrv32.h



/********** General functions ***********/
long __stdcall GetDLLVersionText(char* pstr);

	// function: gets the DLL version text.
	// pstr: pointer to the version text.
	// return: length of dll version text.

long __stdcall GetLastErrorText(char* pstr);

	// function: gets the error messages from the last error that occured
	// pstr: pointer to the messages
	// return: 0

/*********** SEI functions ***********/
extern long __stdcall InitializeSEI(long comm, long mode);
	// return: 0 if no error
extern long __stdcall IsInitialized();

	// function: returns status of initialization
	// return: 0 if not initialized, 1 if initialized
extern long __stdcall GetCommPort();

	// function: re-opens the last opened CommPortreturns the initialized CommPort number
	// return: the CommPort number 1 to 8, -1 if CommPort is not initialized
extern long __stdcall IsAnalog();

	// function: returns true if the device is analog
	// return: 0 if not an analog device, 1 if analog device
extern long __stdcall GetNumberOfDevices();

	// function: returns number of devices found on the SEI bus
	// return: number of devices 0-15, any number other than 0-15 is an error code
extern long __stdcall GetDeviceInfo(long devnum, long *model, long *serialnum, long *version, long *addr);

	// function: Gets some information about a device
	// devnum: 0 To GetNumberOfDevices - 1
	// model: devnum's model#, M1=1, A2=2, ED2=3, AD5=5
	// serialnum: devnum's serial#
	// version: devnum's firmware version#
	// addr: devnum's address
	// return: 0 if no error
extern long __stdcall GetAllDeviceInfo(long devnum, long *model, long *serialnum, long *version, long *addr, long *month, long *day, long *year, long *configuration);

	// function: Gets all information about a device
	// devnum: 0 To GetNumberOfDevices - 1
	// model: devnum's model#, M1=1, A2=2, ED2=3, AD5=5
	// serialnum: devnum's serial#
	// version: devnum's firmware version#
	// addr: devnum's address
	// month: devnum's manufacturing month
	// day: devnum's manufacturing day
	// year: devnum's manufacturing year
	// configuration: devnum's configuration#
	// return: 0 if no error
extern long __stdcall SetDeviceAddress(long SN, long address);

	// function: changes the address of a device on the SEI bus
	// SN: Serial number of the device you want to change the address of
	// address: New address for the device
	// return: 0 if no error
extern long __stdcall SetBaudRate(long baudrate);

	// function: changes the baudrate of the SEI bus
	// baudrate: new baudrate, valid baudrates are: 1200, 2400, 4800, 9600, 19200, 38400, 57600, 115200
	// return: 0 if no error
extern long __stdcall ResetSEI();

	// function: resets the SEI bus by sending a break condition
	// return: 0 if no error
extern long __stdcall GetBusyStatus();

	// function: returns the status of the busy line
	// return: 1 if busy is true, 0 if busy is false
extern long __stdcall CloseSEI();

	// function: Same as M1SetMotors but the M1 stores this value in its EEPROM
	// address: SEI address 0-15
	// motors: control byte
	// return: 0 if no error


/*********** ED2 functions ***********/
extern long __stdcall ED2SetOrigin(long address);

	// function: Resets both counters
	// address: SEI address 0-15
	// return: 0 if no error
extern long __stdcall ED2GetMode(long address, long *mode);

	// function: Gets the mode of an ED2
	// address: SEI address 0-14
	// mode: ED2's mode, see ED2 Communications Protocol Datasheet
	// return: 0 if no error
extern long __stdcall ED2SetMode(long address, long mode);

	// function: Sets the mode of an ED2
	// address: SEI address 0-15
	// mode: ED2's mode, see ED2 Communications Protocol Datasheet
	// return: 0 if no error
extern long __stdcall ED2GetResolution(long address, long *res);

	// function: Gets the resolution of an ED2
	// address: SEI address 0-14
	// res: ED2's resolution
	// return: 0 if no error
extern long __stdcall ED2SetResolution(long address, long res);

	// function: Sets the resolution of an ED2
	// address: SEI address 0-15
	// res: ED2's resolution
	// return: 0 if no error
extern long __stdcall ED2GetPosition1(long address, long *pos);

	// function: Gets the position of an ED2, counter 1
	// address: SEI address 0-14
	// pos: ED2's position
	// return: 0 if no error
extern long __stdcall ED2GetPosition2(long address, long *pos);

	// function: Gets the position of an ED2, counter 2
	// address: SEI address 0-14
	// pos: ED2's position
	// return: 0 if no error
extern long __stdcall ED2SetPosition1(long address, long pos);

	// function: Sets the position of an ED2, counter 1
	// address: SEI address 0-15
	// pos: ED2's position
	// return: 0 if no error
extern long __stdcall ED2SetPosition2(long address, long pos);

	// function: Sets the position of an ED2, counter 2
	// address: SEI address 0-15
	// pos: ED2's position
	// return: 0 if no error
extern long __stdcall ED2GetInput(long address, long *input);

	// function: Gets the status of an ED2's digital inputs
	// address: SEI address 0-14
	// input: input's status
	// -bit0: Push Button #1 State
	// -bit1: Push Button #2 State
	// -bit2: Push Button #3 State
	// -bit3: TTL Input #1 State
	// -bit4: TTL Input #2 State
	// -bit5: TTL Input #3 State
	// -bit6: TTL Input #4 State
	// -bit7: Back Switch State
	// return: 0 if no error
extern long __stdcall ED2SetOutput(long address, long output);